new push with minor edits

--- a/indexjd.html
+++ b/indexjd.html
@@ -9,7 +9,13 @@
 </header>
 <nav></nav>
 <main>
-<p>Kite Yummy is a traditional Japanese restaurant specializing in sushi and hibachi grill entrees. We provide a place for our costumers to enjoy a relaxing and family friendly atmosphere with a welcoming attitude and relaxing music. We have an excellent selection of drinks and spirits for those over the age of 21. Our staff are very kind and our menu is well prepared for first timers who have never had Japanese food, making our restaurant a great place to try sushi for the first time. All our dishes are labeled on the menu if they have raw fish, and almost all of our entrees and appetizers are or can be made vegan or kosher. We offer take options as well and we book reservations by phone. Please come in and enjoy.</p>
+<p>Kite Yummy is a traditional Japanese restaurant specializing in sushi and hibachi grill entrees.<br>
+We provide a place for our costumers to enjoy a relaxing and family friendly atmosphere with a welcoming attitude and relaxing music.
+We have an excellent selection of drinks and spirits for those over the age of 21. <br>
+Our staff are very kind and our menu is well prepared for first timers who have never had Japanese food, making our restaurant a great place to try sushi for the first time. <br>
+All our dishes are labeled on the menu if they have raw fish, and almost all of our entrees and appetizers are or can be made vegan or kosher. <br>
+ We offer take options as well and we book reservations by phone. Please come in and enjoy.</p>
+<img src="sushi.jpg" alt="sushi">
 </main>
 <footer></footer>
 </body>
