--- a/indexjd.html
+++ b/indexjd.html
@@ -7,7 +7,12 @@
 <header>
 <h1>Welcome</h1>
 </header>
-<nav></nav>
+<nav>
+    <a href="/html/">Menu</a> |
+    <a href="/css/">About US</a> |
+    <a href="/js/">Online Orders</a> |
+    <a href="/python/">Contact Us</a>
+  </nav>
 <main>
 <p>Kite Yummy is a traditional Japanese restaurant specializing in sushi and hibachi grill entrees.<br>
 We provide a place for our costumers to enjoy a relaxing and family friendly atmosphere with a welcoming attitude and relaxing music.
